[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 918.0
margin_top = 494.0
margin_right = 1001.0
margin_bottom = 586.0

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
text = "Start Game"

[node name="OptionButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
text = "Options"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
text = "Credits"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 92.0
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_onStartButtonPressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionButton" to="." method="_onOptionButtonPressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_onCreditsButtonPressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_onQuitButtonPressed"]
